// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatWorkflowHistoryEvent should format workflow pendingActivityTaskStartEventAttributes to match snapshot 1`] = `
{
  "activityId": "0",
  "activityType": {
    "name": "activity.cron.Start",
  },
  "attempt": 1,
  "eventTime": 2024-09-07T22:16:10.599Z,
  "eventType": "PendingActivityTaskStart",
  "expirationTime": 1970-01-01T00:06:00.000Z,
  "heartbeatDetails": [
    "1725747370575409843",
    "gadence-canary-xdc",
    "workflow.sanity",
  ],
  "lastFailureDetails": null,
  "lastFailureReason": "",
  "lastHeartbeatTime": null,
  "lastStartedTime": null,
  "lastWorkerIdentity": "",
  "maximumAttempts": 10,
  "scheduleId": 7,
  "scheduledTime": 1970-01-01T00:03:00.000Z,
  "startedWorkerIdentity": "worker-1",
  "state": "scheduled",
}
`;

exports[`formatWorkflowHistoryEvent should format workflow pendingActivityTaskStartEventAttributes to match snapshot 2`] = `
{
  "activityId": "0",
  "activityType": {
    "name": "activity.cron.Start",
  },
  "attempt": 1,
  "eventTime": 2024-09-07T22:16:10.599Z,
  "eventType": "PendingActivityTaskStart",
  "expirationTime": 1970-01-01T00:06:00.000Z,
  "heartbeatDetails": [
    "1725747370575409843",
    "gadence-canary-xdc",
    "workflow.sanity",
  ],
  "lastFailureDetails": null,
  "lastFailureReason": "",
  "lastHeartbeatTime": null,
  "lastStartedTime": 2024-09-07T22:16:10.599Z,
  "lastWorkerIdentity": "",
  "maximumAttempts": 10,
  "scheduleId": 7,
  "scheduledTime": 1970-01-01T00:03:00.000Z,
  "startedWorkerIdentity": "worker-1",
  "state": "started",
}
`;

exports[`formatWorkflowHistoryEvent should format workflow pendingDecisionTaskStartEventAttributes to match snapshot 1`] = `
{
  "attempt": 1,
  "eventTime": 2024-09-07T22:16:10.599Z,
  "eventType": "PendingDecisionTaskStart",
  "originalScheduledTime": null,
  "scheduleId": 7,
  "scheduledTime": 1970-01-01T00:03:00.000Z,
  "startedTime": null,
  "state": "scheduled",
}
`;

exports[`formatWorkflowHistoryEvent should format workflow pendingDecisionTaskStartEventAttributes to match snapshot 2`] = `
{
  "attempt": 1,
  "eventTime": 2024-09-07T22:16:10.599Z,
  "eventType": "PendingDecisionTaskStart",
  "originalScheduledTime": null,
  "scheduleId": 7,
  "scheduledTime": 1970-01-01T00:03:00.000Z,
  "startedTime": 2024-09-07T22:16:10.599Z,
  "state": "started",
}
`;
